2006-09-07  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/server.c:
	* nsd/config.c:
	* nsd/nsmain.c: This is experimental but i think it can stay in the core
	because i ran all tests and i do not see any problems but only benefits:

        Any call to Ns_ConfigXXX family will try to locate config parameter but if it 
	does not exists it will auto-create section and parameter key. If default was given, 
	it will assign default value. this way we have the whole config tree in the memory
	which can be view now more effectivelly with nsconfig.tcl script which will be 
	installed now by default with make install. Ns_ConfigCreateSection will auto-create
	section during startup only, it does call Ns_InfoStarted() which is very quick and 
	after server started, config behaves as ussual.

	contrib/nsconfig.tcl:
	contrib/nsstats.tcl: those script now act as page not tcl library file which
	makes it easy to administer without server restart

	contrib/mimetypes.tcl: Removed as all mime types are embedded already

	contrib/nsd.tcl: nscp is disabled by default

	contrib/nsd-min.tcl: Deleted

	index.adp: Make it in the top level
	simple-config.tcl: smallest and simplest possible config file

	Makefile: reflect recent changes in contrib and config giles

2006-09-07  Bernd Eidenschink  <eide@users.sf.net>

	* doc/src/commandlist.man: First shot of a document listing all
	available server commands, to act as a TOC later. Alpha stage.
	
2006-09-06  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsconf.c:
	* nsd/server.c: Make tcllibray, library, serverdir to reflect
	defaults from the sample config according to simplified one-server
	configuration which is common and easy to understand for newcomers.

	This will also allow to run server with minimal nsd.tcl
	which could be good to have with required settings only for easy
	maintanence.

	ns/parameters/tcllibray points to [ns_info home]/tcl
	ns/server/${server}/tcl/library points to [ns_info home]/modules/tcl